<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/appDesign"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/readManualText" />

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <Button
            android:id="@+id/readButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/readManual" />

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gplText" />

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <Button
            android:id="@+id/readGplv3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/readGpl" />

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ackText" />
    </LinearLayout>

</ScrollView>