<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_description" 
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/buttonSolve"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/solve" />

    <TextView
        android:background="@drawable/outline_black"
        android:id="@+id/textViewSolution"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:padding="@dimen/text_margin"
        android:text="@string/solnLocation"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ScrollView
    android:id="@+id/SCROLLER_ID"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical"
    android:fillViewport="true">
    
    <TextView
        android:id="@+id/textViewCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/codeLocation"
        android:textAppearance="?android:attr/textAppearanceSmall" />
</ScrollView>
</LinearLayout>