<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.littlepancake.glpk.GLPKModLangFragment" >

    <EditText
        android:id="@+id/problemEntryEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonSolve"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView1"
        android:ems="10"
        android:gravity="top|left"
        android:inputType="textMultiLine"
        android:typeface="monospace" />

    <Button
        android:id="@+id/buttonSolve"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/solve" />

    <Button
        android:id="@+id/buttonClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttonSolve"
        android:layout_alignBottom="@+id/buttonSolve"
        android:layout_toRightOf="@+id/buttonSolve"
        android:text="@string/clear" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/enter_lp" />

    <Button
        android:id="@+id/buttonComments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttonClear"
        android:layout_alignBottom="@+id/buttonClear"
        android:layout_toRightOf="@+id/buttonClear"
        android:text="Remove comments" />

</RelativeLayout>